ISSD-3191 Fix more template alignments

--- a/workspaces/liferay-learn-workspace/client-extensions/liferay-learn-theme-css/src/css/_base.scss
+++ b/workspaces/liferay-learn-workspace/client-extensions/liferay-learn-theme-css/src/css/_base.scss
@@ -23,3 +23,7 @@
 .container-fluid-max-xl {
 	max-width: var(--container-max-xl);
 }
+
+.t-paragraph-lg {
+	font-size: var(--text-paragraph-lg-font-size);
+}
